--- a/stylesheets/css/header.css
+++ b/stylesheets/css/header.css
@@ -71,7 +71,12 @@ body { width: 100%; overflow-x: hidden; }
 
 .mobile-menu { display: none; }
 
-@media screen and (min-width: 320px) and (max-width: 800px) { .header { width: 100%; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; border-bottom: 2px solid #1338d1; }
+@media screen and (min-width: 768px) and (max-width: 1024px) { .header .header-right .header__weather-wrapper .header-weather .weather .weather-bg img { width: unset; height: 100%; }
+  .header .header-right .header__weather-wrapper .header-weather .weather .weather-content .weather-content__info { width: 65%; }
+  .header .header-right .header__weather-wrapper .header-waether-dir { top: 15%; width: 15%; padding-right: 10%; }
+  .header .header-right .header__nav { display: -webkit-box; display: -ms-flexbox; display: flex; width: 100%; height: 40%; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding-right: 14%; }
+  .mobile-menu { display: none; } }
+@media screen and (min-width: 320px) and (max-width: 767px) { .header { width: 100%; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; border-bottom: 2px solid #1338d1; }
   .header .header-left { width: 100%; height: 8.5rem; border-right: none; padding-left: 0; -webkit-align-items: center; -moz-align-items: center; -ms-align-items: center; align-items: center; border-bottom: 2px solid #1338d1; }
   .header .header-left .header__logo { width: 16%; padding-right: 0; }
   .header .header-left .header__logo a { width: 100%; margin-top: 0; }
