--- a/stylesheets/css/location.css
+++ b/stylesheets/css/location.css
@@ -14,7 +14,7 @@ body { width: 100%; overflow-x: hidden; }
 .location .location-content .location-content__header { position: relative; width: 25%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; }
 .location .location-content .location-content__header .content-header__subtitle { width: 100%; font-size: 1.2rem; font-family: 'oACYCZno'; color: #999999; text-align: left; }
 .location .location-content .location-content__header .content-header__title { width: 100%; font-size: 2rem; line-height: 2.8rem; font-family: 'oACYCZno'; font-weight: bold; color: #2b2b2b; margin-top: 1rem; text-align: left; word-break: keep-all; word-wrap: break-word; }
-.location .location-content .location-content__link { position: relative; width: 25%; margin-top: 8rem; }
+.location .location-content .location-content__link { position: relative; width: 30%; margin-top: 8rem; }
 .location .location-content .location-content__link .content-link__btn { width: 80%; height: 7.5rem; border-radius: 7.5rem; border: none; background-color: #1338d1; margin-left: -3rem; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding-left: 3rem; padding-right: 5rem; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-align-items: center; -moz-align-items: center; -ms-align-items: center; align-items: center; -webkit-justify-content: space-between; -moz-justify-content: space-between; -ms-justify-content: space-between; justify-content: space-between; -ms-flex-pack: space-between; cursor: pointer; margin-top: 2rem; }
 .location .location-content .location-content__link .content-link__btn:hover span { -webkit-transform: translateX(10px); -ms-transform: translateX(10px); transform: translateX(10px); }
 .location .location-content .location-content__link .content-link__btn p { font-size: 1.8rem; line-height: 1.8rem; font-family: 'Do Hyeon'; color: white; }
@@ -49,7 +49,18 @@ body { width: 100%; overflow-x: hidden; }
 .ad .ad-tab .ad-tab__text span { margin-top: 2rem; width: 40%; height: 1.8rem; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-justify-content: center; -moz-justify-content: center; -ms-justify-content: center; justify-content: center; -ms-flex-pack: center; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
 .ad .ad-tab .ad-tab__text span img { width: 100%; }
 
-@media screen and (min-width: 320px) and (max-width: 800px) { .location { height: 145vw; }
+@media screen and (min-width: 768px) and (max-width: 1024px) { .location { height: 42vw; }
+  .location .location-map img { width: 117%; position: absolute; bottom: 0; left: unset; right: 10%; }
+  .location .location-content { margin-top: 6%; padding: 0 10%; }
+  .location .location-content .location-content__link { width: 40%; margin-top: 7rem; }
+  .location .location-content .location-content__link .content-link__btn { height: 6.5rem; border-radius: 6.5rem; }
+  .location-info { padding: 0 10%; }
+  .location-info .info-tab-wrapper { display: -webkit-box; display: -ms-flexbox; display: flex; width: 50%; margin-right: 25%; }
+  .location-info .info-book { width: 40%; }
+  .location-info .info-book .info-tab__book { height: 6.5rem; border-radius: 6.5rem; }
+  .ad { margin-top: 12rem; padding: 0 10%; }
+  .ad .ad-tab .ad-tab__text .text-title { width: 80%; word-break: keep-all; word-wrap: break-word; } }
+@media screen and (min-width: 320px) and (max-width: 767px) { .location { height: 145vw; }
   .location .location-map { width: 100%; height: 100%; }
   .location .location-map img { width: unset; height: 110%; position: absolute; bottom: -10%; left: unset; right: -20%; }
   .location .location-content { position: absolute; width: 100%; margin-top: 10%; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding: 0 7%; top: 0; left: 0; }
