--- a/stylesheets/class.scss
+++ b/stylesheets/class.scss
@@ -188,7 +188,7 @@ body {
 			.lesson-button {
 				position: absolute;
 				z-index: 2;
-				width: 70%;
+				width: 100%;
 				height: 10rem;
 				bottom: -4rem;
 				overflow: hidden;
@@ -211,7 +211,7 @@ body {
 					position: absolute;
 					color: $font-white;
 					bottom: 4rem;
-					font-size: 1.6rem;
+					font-size: 1.4rem;
 					font-family: 'oACYCZno';
 					text-align: center;
 					letter-spacing: 0.1rem;
@@ -496,7 +496,120 @@ body {
 		}
 	}
 }
-@media screen and (min-width: 320px) and (max-width: 800px) {
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+	.lesson {
+		width: 100%;
+		.lesson-header {
+			height: 28vw;
+			.lesson-header__bg {
+			}
+			.lesson-header__text {
+				padding: 0 10%;
+				padding-top: 7%;
+				.lesson-header__subtitle {
+				}
+				.lesson-header__title {
+				}
+			}
+		}
+		.lesson-content {
+			padding: 0 10%;
+			.lesson-content__type {
+				width: calc(94% / 3);
+				margin-left: 3%;
+				.lesson-card {
+					//@include lesson-card-bg();
+					@include box-shadow(0.1rem 0.8rem 3.5rem rgba(76, 76, 76, 0.5));
+					&:hover {
+						.lesson-card__title {
+							color: $main-color;
+							border: 2px solid $main-color;
+						}
+						.lesson-card__desc {
+						}
+					}
+					.lesson-card__title {
+						font-size: 1.6rem;
+						border: 2px solid $font-gray2;
+						padding: 1.5rem 3rem;
+						margin-top: 3.5rem;
+					}
+					.lesson-card__desc {
+						width: 70%;
+						height: 19rem;
+						margin-top: 3.5rem;
+					}
+					.lesson-card__price {
+						font-size: 2rem;
+						margin-top: 2.5rem;
+					}
+					.lesson-card__price-desc {
+						width: 70%;
+					}
+					.lesson-card__teacher {
+						margin-top: 4rem;
+					}
+					.lesson-card__teacher-profile {
+						padding: 0 5%;
+						height: 4rem;
+						margin-bottom: 9rem;
+						.teacher-profile {
+							margin-left: 4%;
+							width: 4rem;
+							height: 4rem;
+						}
+					}
+				}
+			}
+		}
+	}
+	.teacher {	
+		padding: 3% 10% 5% 10%;
+		.teacher-wrapper {
+			.teacher-profile {
+				.teacher-profile__pic {
+				}
+				.teacher-profile__name {
+				}
+				.teacher-profile__character {
+					font-size: 1.2rem;
+					line-height: 2.2rem;
+				}
+			}
+		}
+	}
+	.safety {
+		padding: 0 10%;
+		.safety-button-wrapper {
+			padding: 0 14%;
+			.safety-button {
+				margin-top: 3rem;			
+			}
+		}
+	}
+	.snap {
+		height: 48vw;
+		.snap-content {
+			height: 48vw;
+			.snap-content__gallery {
+				.gallery-tab {
+					.gallery-title {						
+						bottom: 1rem;
+					}
+				}
+			}			
+			.snap-content__more {
+				p{
+					width: 65%;
+					text-align: left;
+					word-wrap: break-word;
+					word-break: keep-all;
+				}
+			}
+		}
+	}
+}
+@media screen and (min-width: 320px) and (max-width: 767px) {
 	.lesson {
 		.lesson-header {
 			width: 100%;
