--- a/stylesheets/css/class.css
+++ b/stylesheets/css/class.css
@@ -30,11 +30,11 @@ body { width: 100%; overflow-x: hidden; }
 .lesson .lesson-content .lesson-content__type .lesson-card .lesson-card__teacher-profile .teacher-profile { width: 5rem; height: 5rem; border-radius: 50%; overflow: hidden; background-color: white; border: 2px solid #1338d1; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-justify-content: center; -moz-justify-content: center; -ms-justify-content: center; justify-content: center; -ms-flex-pack: center; -webkit-align-items: center; -moz-align-items: center; -ms-align-items: center; align-items: center; cursor: pointer; position: relative; margin-left: 7%; cursor: pointer; }
 .lesson .lesson-content .lesson-content__type .lesson-card .lesson-card__teacher-profile .teacher-profile:nth-of-type(1) { margin-left: 0; }
 .lesson .lesson-content .lesson-content__type .lesson-card .lesson-card__teacher-profile .teacher-profile img { position: absolute; top: 5%; width: 100%; }
-.lesson .lesson-content .lesson-content__type .lesson-button { position: absolute; z-index: 2; width: 70%; height: 10rem; bottom: -4rem; overflow: hidden; cursor: pointer; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
+.lesson .lesson-content .lesson-content__type .lesson-button { position: absolute; z-index: 2; width: 100%; height: 10rem; bottom: -4rem; overflow: hidden; cursor: pointer; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
 .lesson .lesson-content .lesson-content__type .lesson-button:hover { -webkit-box-shadow: 1.6rem 1.2rem 4rem rgba(76, 76, 76, 0.5); -moz-box-shadow: 1.6rem 1.2rem 4rem rgba(76, 76, 76, 0.5); box-shadow: 1.6rem 1.2rem 4rem rgba(76, 76, 76, 0.5); }
 .lesson .lesson-content .lesson-content__type .lesson-button:hover .lesson-button__submit { letter-spacing: 0.3rem; }
 .lesson .lesson-content .lesson-content__type .lesson-button img { position: absolute; width: 100%; top: 0; left: 0; }
-.lesson .lesson-content .lesson-content__type .lesson-button .lesson-button__submit { width: 100%; position: absolute; color: white; bottom: 4rem; font-size: 1.6rem; font-family: 'oACYCZno'; text-align: center; letter-spacing: 0.1rem; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
+.lesson .lesson-content .lesson-content__type .lesson-button .lesson-button__submit { width: 100%; position: absolute; color: white; bottom: 4rem; font-size: 1.4rem; font-family: 'oACYCZno'; text-align: center; letter-spacing: 0.1rem; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
 
 .teacher { width: 100%; position: relative; background-color: #efefef; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding: 3% 12% 5% 12%; margin-top: 12rem; }
 .teacher .teacher-wrapper { width: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -ms-flex-wrap: wrap; flex-wrap: wrap; }
@@ -79,7 +79,30 @@ body { width: 100%; overflow-x: hidden; }
 .snap .snap-content .snap-content__more span { width: 2.5rem; height: 1.8rem; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-align-items: center; -moz-align-items: center; -ms-align-items: center; align-items: center; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
 .snap .snap-content .snap-content__more span img { width: 100%; }
 
-@media screen and (min-width: 320px) and (max-width: 800px) { .lesson .lesson-header { width: 100%; height: 55vw; position: relative; }
+@media screen and (min-width: 768px) and (max-width: 1024px) { .lesson { width: 100%; }
+  .lesson .lesson-header { height: 28vw; }
+  .lesson .lesson-header .lesson-header__text { padding: 0 10%; padding-top: 7%; }
+  .lesson .lesson-content { padding: 0 10%; }
+  .lesson .lesson-content .lesson-content__type { width: calc(94% / 3); margin-left: 3%; }
+  .lesson .lesson-content .lesson-content__type .lesson-card { -webkit-box-shadow: 0.1rem 0.8rem 3.5rem rgba(76, 76, 76, 0.5); -moz-box-shadow: 0.1rem 0.8rem 3.5rem rgba(76, 76, 76, 0.5); box-shadow: 0.1rem 0.8rem 3.5rem rgba(76, 76, 76, 0.5); }
+  .lesson .lesson-content .lesson-content__type .lesson-card:hover .lesson-card__title { color: #1338d1; border: 2px solid #1338d1; }
+  .lesson .lesson-content .lesson-content__type .lesson-card .lesson-card__title { font-size: 1.6rem; border: 2px solid #606060; padding: 1.5rem 3rem; margin-top: 3.5rem; }
+  .lesson .lesson-content .lesson-content__type .lesson-card .lesson-card__desc { width: 70%; height: 19rem; margin-top: 3.5rem; }
+  .lesson .lesson-content .lesson-content__type .lesson-card .lesson-card__price { font-size: 2rem; margin-top: 2.5rem; }
+  .lesson .lesson-content .lesson-content__type .lesson-card .lesson-card__price-desc { width: 70%; }
+  .lesson .lesson-content .lesson-content__type .lesson-card .lesson-card__teacher { margin-top: 4rem; }
+  .lesson .lesson-content .lesson-content__type .lesson-card .lesson-card__teacher-profile { padding: 0 5%; height: 4rem; margin-bottom: 9rem; }
+  .lesson .lesson-content .lesson-content__type .lesson-card .lesson-card__teacher-profile .teacher-profile { margin-left: 4%; width: 4rem; height: 4rem; }
+  .teacher { padding: 3% 10% 5% 10%; }
+  .teacher .teacher-wrapper .teacher-profile .teacher-profile__character { font-size: 1.2rem; line-height: 2.2rem; }
+  .safety { padding: 0 10%; }
+  .safety .safety-button-wrapper { padding: 0 14%; }
+  .safety .safety-button-wrapper .safety-button { margin-top: 3rem; }
+  .snap { height: 48vw; }
+  .snap .snap-content { height: 48vw; }
+  .snap .snap-content .snap-content__gallery .gallery-tab .gallery-title { bottom: 1rem; }
+  .snap .snap-content .snap-content__more p { width: 65%; text-align: left; word-wrap: break-word; word-break: keep-all; } }
+@media screen and (min-width: 320px) and (max-width: 767px) { .lesson .lesson-header { width: 100%; height: 55vw; position: relative; }
   .lesson .lesson-header .lesson-header__bg img { width: unset; height: 100%; }
   .lesson .lesson-header .lesson-header__text { padding: 0 12%; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding-top: 7%; }
   .lesson .lesson-header .lesson-header__text .lesson-header__subtitle { font-size: 1rem; }
