--- a/stylesheets/css/index.css
+++ b/stylesheets/css/index.css
@@ -75,7 +75,7 @@ body { width: 100%; overflow-x: hidden; }
 .lesson .lesson-content .lesson-content__type .lesson-card .lesson-card__teacher-profile .teacher-profile { width: 5rem; height: 5rem; border-radius: 50%; overflow: hidden; background-color: white; border: 2px solid #1338d1; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-justify-content: center; -moz-justify-content: center; -ms-justify-content: center; justify-content: center; -ms-flex-pack: center; -webkit-align-items: center; -moz-align-items: center; -ms-align-items: center; align-items: center; cursor: pointer; position: relative; margin-left: 7%; cursor: pointer; }
 .lesson .lesson-content .lesson-content__type .lesson-card .lesson-card__teacher-profile .teacher-profile:nth-of-type(1) { margin-left: 0; }
 .lesson .lesson-content .lesson-content__type .lesson-card .lesson-card__teacher-profile .teacher-profile img { position: absolute; top: 5%; width: 100%; }
-.lesson .lesson-content .lesson-content__type .lesson-button { position: absolute; z-index: 2; width: 70%; height: 10rem; bottom: -4rem; overflow: hidden; cursor: pointer; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
+.lesson .lesson-content .lesson-content__type .lesson-button { position: absolute; z-index: 2; width: 100%; height: 10rem; bottom: -4rem; overflow: hidden; cursor: pointer; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
 .lesson .lesson-content .lesson-content__type .lesson-button:hover { -webkit-box-shadow: 1.6rem 1.2rem 4rem rgba(76, 76, 76, 0.5); -moz-box-shadow: 1.6rem 1.2rem 4rem rgba(76, 76, 76, 0.5); box-shadow: 1.6rem 1.2rem 4rem rgba(76, 76, 76, 0.5); }
 .lesson .lesson-content .lesson-content__type .lesson-button:hover .lesson-button__submit { letter-spacing: 0.3rem; }
 .lesson .lesson-content .lesson-content__type .lesson-button img { position: absolute; width: 100%; top: 0; left: 0; }
@@ -131,9 +131,55 @@ body { width: 100%; overflow-x: hidden; }
 .rent .rent-content .rent-conent__text .rent-content__more span { width: 2.5rem; height: 1.8rem; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-align-items: center; -moz-align-items: center; -ms-align-items: center; align-items: center; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
 .rent .rent-content .rent-conent__text .rent-content__more span img { width: 100%; }
 
-@media screen and (min-width: 320px) and (max-width: 800px) { .slider { width: 100%; height: 90vw; }
+@media screen and (min-width: 768px) and (max-width: 1024px) { .slider { height: 38vw; }
+  .slider .slider-wrapper .slide { height: 38vw; }
+  .slider .slider-wrapper .slide .slide-image { width: 100%; height: 38vw; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-justify-content: center; -moz-justify-content: center; -ms-justify-content: center; justify-content: center; -ms-flex-pack: center; -webkit-align-items: center; -moz-align-items: center; -ms-align-items: center; align-items: center; }
+  .slider .slider-wrapper .slide .slide-sideblur { display: none; }
+  .slider .slider-wrapper .slide .slide-content { margin-left: 10%; width: 80%; }
+  .slider .slider-wrapper .slide .slide-content .content-text { padding-top: 8%; }
+  .slider .slider-wrapper .slide .slide-content .content-text .content-text__title { font-size: 7rem; }
+  .slider .slider-control { padding-left: 10%; }
+  .slider .slider-control .control-navigation { width: 10%; }
+  .slider .slider-control .control-arrow { width: 35%; }
+  .review { padding: 0 10%; margin-top: 6rem; }
+  .review .review-wrapper .review-header { height: 24vw; }
+  .review .review-wrapper .review-header .review-header__title { width: 100%; margin-top: 1rem; position: relative; }
+  .review .review-wrapper .review-header .review-header__more { left: -1rem; bottom: 3rem; padding-right: 3rem; }
+  .review .review-wrapper .review-header .review-header__more p { width: 65%; text-align: left; word-wrap: break-word; word-break: keep-all; }
+  .review .review-wrapper .review-content { height: 24vw; position: relative; }
+  .review .review-wrapper .review-content .review-content-wrapper { width: 100%; height: 24vw; }
+  .review .review-wrapper .review-content .review-content-wrapper .review-card { width: 30vw; margin-right: 2rem; }
+  .review .review-wrapper .review-content .review-content-wrapper .review-card:hover .review-card__card { border: 2px solid #1338d1; }
+  .review .review-wrapper .review-content .review-content-wrapper .review-card .review-card__card { width: 100%; height: 17.5vw; -webkit-box-shadow: 0.6rem 0.8rem 2.5rem rgba(76, 76, 76, 0.5); -moz-box-shadow: 0.6rem 0.8rem 2.5rem rgba(76, 76, 76, 0.5); box-shadow: 0.6rem 0.8rem 2.5rem rgba(76, 76, 76, 0.5); border: 2px solid transparent; }
+  .review .review-wrapper .review-content .review-content-wrapper .review-card .review-card__card .card-content .card-content__text { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding-left: 5%; word-break: break-all; }
+  .lesson { margin-top: 8rem; height: 70vw; }
+  .lesson .lesson-bg img { width: unset; height: 100%; }
+  .lesson .lesson-header { border-bottom: 2px solid #1338d1; }
+  .lesson .lesson-content { padding: 0 10%; }
+  .lesson .lesson-content .lesson-content__type { width: calc(94% / 3); margin-left: 3%; }
+  .lesson .lesson-content .lesson-content__type .lesson-card { -webkit-box-shadow: 0.1rem 0.8rem 3.5rem rgba(76, 76, 76, 0.5); -moz-box-shadow: 0.1rem 0.8rem 3.5rem rgba(76, 76, 76, 0.5); box-shadow: 0.1rem 0.8rem 3.5rem rgba(76, 76, 76, 0.5); }
+  .lesson .lesson-content .lesson-content__type .lesson-card:hover .lesson-card__title { color: #1338d1; border: 2px solid #1338d1; }
+  .lesson .lesson-content .lesson-content__type .lesson-card .lesson-card__title { font-size: 1.6rem; border: 2px solid #606060; padding: 1.5rem 3rem; margin-top: 3.5rem; }
+  .lesson .lesson-content .lesson-content__type .lesson-card .lesson-card__desc { width: 65%; height: 13.2rem; margin-top: 3.5rem; }
+  .lesson .lesson-content .lesson-content__type .lesson-card .lesson-card__teacher { margin-top: 4rem; }
+  .lesson .lesson-content .lesson-content__type .lesson-card .lesson-card__teacher-profile { padding: 0 5%; height: 4rem; margin-bottom: 9rem; }
+  .lesson .lesson-content .lesson-content__type .lesson-card .lesson-card__teacher-profile .teacher-profile { margin-left: 4%; width: 4rem; height: 4rem; }
+  .safety { padding: 0 10%; }
+  .safety .safety-button-wrapper { padding: 0 14%; }
+  .safety .safety-button-wrapper .safety-button { margin-top: 3rem; }
+  .snap { height: 48vw; }
+  .snap .snap-content { height: 48vw; }
+  .snap .snap-content .snap-content__gallery .gallery-tab .gallery-title { bottom: 1rem; }
+  .snap .snap-content .snap-content__more p { width: 65%; text-align: left; word-wrap: break-word; word-break: keep-all; }
+  .rent { height: 44vw; padding: 0 10%; }
+  .rent .rent-image { height: 44vw; }
+  .rent .rent-image img { width: 100%; position: absolute; bottom: -20%; }
+  .rent .rent-content { width: 33%; height: 38vw; right: 10%; -webkit-box-shadow: 1.4rem 0.8rem 3.5rem rgba(76, 76, 76, 0.5); -moz-box-shadow: 1.4rem 0.8rem 3.5rem rgba(76, 76, 76, 0.5); box-shadow: 1.4rem 0.8rem 3.5rem rgba(76, 76, 76, 0.5); }
+  .rent .rent-content .rent-conent__text .rent-content__desc { margin-top: 3.5rem; }
+  .rent .rent-content .rent-conent__text .rent-content__more { margin-top: 3.5rem; } }
+@media screen and (min-width: 320px) and (max-width: 767px) { .slider { width: 100%; height: 90vw; }
   .slider .slider-wrapper .slide { width: 100%; height: 90vw; }
-  .slider .slider-wrapper .slide .slide-image { width: 100%; height: 90vw; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-justify-content: center; -moz-justify-content: center; -ms-justify-content: center; justify-content: center; -ms-flex-pack: center; -webkit-align-items: center; -moz-align-items: center; -ms-align-items: center; align-items: center; }
+  .slider .slider-wrapper .slide .slide-image { width: 100%; height: 90vw; }
   .slider .slider-wrapper .slide .slide-image img { width: unset; height: 100%; }
   .slider .slider-wrapper .slide .slide-sideblur { display: none; }
   .slider .slider-wrapper .slide .slide-content { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-justify-content: space-between; -moz-justify-content: space-between; -ms-justify-content: space-between; justify-content: space-between; -ms-flex-pack: space-between; -webkit-align-items: center; -moz-align-items: center; -ms-align-items: center; align-items: center; width: 80%; margin-left: 5%; }
@@ -181,8 +227,7 @@ body { width: 100%; overflow-x: hidden; }
   .lesson .lesson-content .lesson-content__type .lesson-card .lesson-card__title { color: #606060; font-size: 1.4rem; width: 70%; border: 2px solid #606060; padding: 1.5rem 3rem; margin-top: 3.5rem; }
   .lesson .lesson-content .lesson-content__type .lesson-card .lesson-card__desc { width: 70%; height: 12rem; font-size: 1.2rem; line-height: 2.2rem; margin-top: 3.5rem; }
   .lesson .lesson-content .lesson-content__type .lesson-card .lesson-card__teacher { font-size: 1.4rem; }
-  .lesson .lesson-content .lesson-content__type .lesson-card .lesson-card__teacher-profile { padding: 0 5%; height: 4.5rem; margin-bottom: 9rem; }
-  .lesson .lesson-content .lesson-content__type .lesson-card .lesson-card__teacher-profile .teacher-profile { width: 4.5rem; height: 4.5rem; }
+  .lesson .lesson-content .lesson-content__type .lesson-card .lesson-card__teacher-profile { margin-left: 7%; }
   .lesson .lesson-content .lesson-content__type .lesson-card .lesson-card__teacher-profile .teacher-profile img { top: 10%; }
   .lesson .lesson-content .lesson-content__type .lesson-button { width: 100%; }
   .lesson .lesson-content .lesson-content__type .lesson-button:hover { -webkit-box-shadow: none; -moz-box-shadow: none; box-shadow: none; }
