--- a/stylesheets/css/rent.css
+++ b/stylesheets/css/rent.css
@@ -55,7 +55,21 @@ body { width: 100%; overflow-x: hidden; }
 .ad .ad-tab .ad-tab__text span { margin-top: 2rem; width: 40%; height: 1.8rem; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-justify-content: center; -moz-justify-content: center; -ms-justify-content: center; justify-content: center; -ms-flex-pack: center; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
 .ad .ad-tab .ad-tab__text span img { width: 100%; }
 
-@media screen and (min-width: 320px) and (max-width: 800px) { .rent { height: 110vw; }
+@media screen and (min-width: 768px) and (max-width: 1024px) { .rent { height: 45vw; }
+  .rent .rent-content { padding: 6% 10%; }
+  .rent .rent-content .rent-content__header { width: 35%; }
+  .rent .rent-button .rent-button__more { width: 28%; height: 6.5rem; border-radius: 6.5rem; padding-right: 3rem; }
+  .rent-fee { margin-top: 12rem; padding: 0 10%; }
+  .rent-fee .rent-fee__text { width: calc(92% / 3); padding-right: 5%; }
+  .rent-fee .rent-fee__text .fee-text__subtitle { width: 100%; font-size: 1.2rem; font-family: 'oACYCZno'; color: #999999; }
+  .rent-fee .rent-fee__text .fee-text__title { width: 100%; font-size: 2rem; line-height: 2.8rem; font-family: 'oACYCZno'; font-weight: bold; color: #2b2b2b; margin-top: 1rem; word-break: keep-all; word-wrap: break-word; }
+  .rent-fee .rent-fee__text .fee-text__desc { margin-top: 4.5rem; word-break: keep-all; word-wrap: break-word; font-family: 'oACYCZno'; color: #2b2b2b; width: 100%; font-size: 1.2rem; line-height: 2.2rem; }
+  .rent-fee .rent-fee__card { height: 33vw; }
+  .rent-fee .rent-fee__card .card-content .card-title { font-size: 1.6rem; width: 70%; padding: 1.5rem 3rem; }
+  .rent-fee .rent-fee__card .card-content .card-subtitle { font-size: 1.4rem; }
+  .ad { margin-top: 12rem; padding: 0 10%; }
+  .ad .ad-tab .ad-tab__text .text-title { width: 80%; word-break: keep-all; word-wrap: break-word; } }
+@media screen and (min-width: 320px) and (max-width: 767px) { .rent { height: 110vw; }
   .rent .rent-bg { -webkit-justify-content: center; -moz-justify-content: center; -ms-justify-content: center; justify-content: center; -ms-flex-pack: center; }
   .rent .rent-bg img { width: unset; height: 100%; }
   .rent .rent-content { padding: 15% 7% 10% 7%; }
