--- a/stylesheets/footer.scss
+++ b/stylesheets/footer.scss
@@ -79,7 +79,8 @@ body {
 		font-family: 'oACYCZno'; 
 	}
 }
-@media screen and (min-width: 320px) and (max-width: 800px) {
+@media screen and (min-width: 768px) and (max-width: 1024px) {}
+@media screen and (min-width: 320px) and (max-width: 767px) {
 	.footer {
 		margin-top: 8rem;
 		padding-top: 7%;
