--- a/stylesheets/header.scss
+++ b/stylesheets/header.scss
@@ -339,7 +339,47 @@ body {
 .mobile-menu {
 	display: none;
 }
-@media screen and (min-width: 320px) and (max-width: 800px) {
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+	.header {		
+		.header-right {
+			.header__weather-wrapper {
+				.header-weather {
+					.weather {						
+						.weather-bg {
+							img {
+								width: unset;
+								height: 100%;
+							}
+						}
+						.weather-content {
+							.weather-content__info {
+								width: 65%;
+								.info-tab {															
+								}
+							}
+						}								
+					}
+				}
+				.header-waether-dir {					
+					top: 15%;
+					width: 15%;			
+					padding-right: 10%;					
+				}
+			}
+			.header__nav {
+				@include flexbox();
+				width: 100%;
+				height: 40%;
+				@include box-sizing(border-box);
+				padding-right: 14%;				
+			}
+		}
+	}
+	.mobile-menu {
+		display: none;
+	}
+}
+@media screen and (min-width: 320px) and (max-width: 767px) {
 	.header {
 		width: 100%;
 		@include flex-direction(column);
