--- a/stylesheets/location.scss
+++ b/stylesheets/location.scss
@@ -61,7 +61,7 @@ body {
 		}
 		.location-content__link {
 			position: relative;
-			width: 25%;
+			width: 30%;
 			margin-top: 8rem;
 			.content-link__btn {
 				width: 80%;
@@ -264,7 +264,67 @@ body {
 		}
 	}
 }
-@media screen and (min-width: 320px) and (max-width: 800px) {
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+.location {
+	height: 42vw;
+	.location-map {
+		img {
+			width: 117%;
+			position: absolute;
+			bottom: 0;
+			left: unset;
+			right: 10%;
+		}
+	}
+	.location-content {
+		margin-top: 6%;
+		padding: 0 10%;
+		.location-content__header {
+			.content-header__subtitle {
+			}
+			.content-header__title {
+			}
+		}
+		.location-content__link {
+			width: 40%;
+			margin-top: 7rem;
+			.content-link__btn {
+				height: 6.5rem;
+				border-radius: 6.5rem;
+			}		
+		}
+	}
+}
+.location-info {	
+	padding: 0 10%;
+	.info-tab-wrapper {
+		@include flexbox();
+		width: 50%;
+		margin-right: 25%;		
+	}	
+	.info-book {
+		width: 40%;
+		.info-tab__book {
+			height: 6.5rem;
+			border-radius: 6.5rem;			
+		}
+	}
+}
+.ad {
+	margin-top: 12rem;
+	padding: 0 10%;
+	.ad-tab {
+		.ad-tab__text {
+			.text-title {
+				width: 80%;
+				word-break: keep-all;
+				word-wrap: break-word;;
+			}			
+		}
+	}
+}
+}
+@media screen and (min-width: 320px) and (max-width: 767px) {
 .location {
 	height: 145vw;
 	.location-map {
