--- a/stylesheets/base/_mixin.scss
+++ b/stylesheets/base/_mixin.scss
@@ -13,17 +13,14 @@
           flex-direction: $val;
 }
 @mixin justify-content($justify) {
-  -webkit-justify-content: $justify;
-     -moz-justify-content: $justify;
-      -ms-justify-content: $justify;
-          justify-content: $justify;
-            -ms-flex-pack: $justify;
+   -webkit-box-pack: $justify;
+      -ms-flex-pack: $justify;
+    justify-content: $justify;
 }
 @mixin align-items($align) {
-  -webkit-align-items: $align;
-     -moz-align-items: $align;
-      -ms-align-items: $align;
-          align-items: $align;
+  -webkit-box-align: $align;
+     -ms-flex-align: $align;
+        align-items: $align;
 }
 @mixin order($val) {
   -ms-flex-order:$val;
