--- a/stylesheets/location.scss
+++ b/stylesheets/location.scss
@@ -12,7 +12,7 @@ body {
 .location {
 	position: relative;
 	width: 100%;
-	height: 65vh;
+	height: 70vh;
 	.location-map {
 		width: 100%;
 		height: 100%;
@@ -36,20 +36,20 @@ body {
 		left: 0;
 		.location-content__header {
 			position: relative;
-			width: 25%;
+			width: 30%;
 			@include flexbox();
 			@include flex-direction(column);
 			.content-header__subtitle {
 				width: 100%;
-				font-size: 1.2rem;
+				font-size: 1.6rem;
 				font-family: 'oACYCZno';
 				color: $font-gray3;
 				text-align: left;
 			}
 			.content-header__title {
 				width: 100%;
-				font-size: 2rem;
-				line-height: 2.8rem;
+				font-size: 2.5rem;
+				line-height: 1.5;
 				font-family: 'oACYCZno';
 				font-weight: bold;
 				color: $font-gray1;
@@ -72,7 +72,7 @@ body {
 				margin-left: -3rem;
 				@include box-sizing(border-box);
 				padding-left: 3rem;
-				padding-right: 5rem;
+				padding-right: 3rem;
 				@include flexbox();
 				@include align-items(center);
 				@include justify-content(space-between);
@@ -84,14 +84,16 @@ body {
 					}
 				}
 				p{
-					font-size: 1.8rem;
-					line-height: 1.8rem;
+					font-size: 2rem;
+					line-height: 2rem;
 					font-family: 'Do Hyeon';
 					color: $font-white;
+					text-align: left;
+					width: 65%;
 				}
 				span {
 					width: 2.5rem;
-					height: 1.8rem;
+					height: 2rem;
 					@include flexbox();
 					@include align-items(center);
 					@include transition(all 0.5s ease);
@@ -134,7 +136,7 @@ body {
 				}
 				.tab-header__title {
 					width: 65%;
-					font-size: 1.6rem;
+					font-size: 1.8rem;
 					font-family: 'oACYCZno';
 					font-weight: bold;
 					color: $font-gray1;				
@@ -143,9 +145,9 @@ body {
 			.info-tab__content {
 				width: 100%;
 				margin-top: 2rem;
-				line-height: 2.2rem;
+				line-height: 1.5;
 				font-family: 'oACYCZno';
-				font-size: 1.4rem;
+				font-size: 1.6rem;
 			}
 		}
 	}	
@@ -246,7 +248,7 @@ body {
 			.text-title {
 				width: 100%;
 				text-align: center;
-				font-size: 1.8rem;
+				font-size: 2.2rem;
 				color: $font-white;
 				font-family: 'Do Hyeon';
 			}
@@ -361,7 +363,7 @@ body {
 		}
 		.location-content__link {
 			position: relative;
-			width: 48%;
+			width: 52%;
 			margin-top: 4rem;
 			.content-link__btn {
 				width: 100%;
