--- a/stylesheets/rent.scss
+++ b/stylesheets/rent.scss
@@ -30,7 +30,7 @@ body {
 		left: 0;
 		width: 100%;
 		height: 100%;
-		background-color: $main-color-500;
+		background-color: $main-color-700;
 	}
 	.rent-content {
 		width: 100%;
@@ -44,22 +44,21 @@ body {
 		@include flex-direction(column);
 		@include justify-content(space-between);
 		.rent-content__header {
-			width: 25%;
+			width: 30%;
 			@include flexbox();
 			@include flex-direction(column);
 			position: relative;
 			.header-subtitle {
 				width: 100%;
-				font-size: 1.2rem;
+				font-size: 1.6rem;
 				font-family: 'oACYCZno';
 				color: $font-white;
 				text-align: left;
-				text-shadow: 1px 5px 7px $main-color;
 			}
 			.header-title {
 				width: 100%;
-				font-size: 2rem;
-				line-height: 2.8rem;
+				font-size: 2.5rem;
+				line-height: 1.5;
 				font-family: 'oACYCZno';
 				font-weight: bold;
 				color: $font-white;
@@ -67,20 +66,18 @@ body {
 				text-align: left;
 				word-break: keep-all;
 				word-wrap: break-word;
-				text-shadow: 1px 3px 7px $main-color;
 			}
 			.header-desc {
 				font-family: 'oACYCZno'; 
 				width: 80%;
 				height: 14rem;
-				font-size: 1.2rem;
-				line-height: 2.2rem;
+				font-size: 1.4rem;
+				line-height: 1.8;
 				word-break: keep-all;
 				word-wrap: break-word;
 				margin-top: 4.5rem;
 				text-align: left;
 				color: $font-white;
-				text-shadow: 1px 5px 7px $main-color;
 			}
 		}
 	}
@@ -98,7 +95,7 @@ body {
 			border: none;
 			@include box-sizing(border-box);
 			padding-left: 3rem;
-			padding-right: 5rem;
+			padding-right: 3rem;
 			@include flexbox();
 			@include align-items(center);
 			@include justify-content(space-between);
@@ -110,14 +107,14 @@ body {
 				}
 			}
 			p{
-				font-size: 1.8rem;
-				line-height: 1.8rem;
+				font-size: 2rem;
+				line-height: 2rem;
 				font-family: 'Do Hyeon';
 				color: $font-white;
 			}
 			span {
 				width: 2.5rem;
-				height: 1.8rem;
+				height: 2rem;
 				@include flexbox();
 				@include align-items(center);
 				@include transition(all 0.5s ease);
@@ -142,14 +139,14 @@ body {
 		padding-right: 5%;
 		.fee-text__subtitle {
 			width: 100%;
-			font-size: 1.2rem;
+			font-size: 1.6rem;
 			font-family: 'oACYCZno';
 			color: $font-gray3;
 		}
 		.fee-text__title {
 			width: 100%;
-			font-size: 2rem;
-			line-height: 2.8rem;
+			font-size: 2.5rem;
+			line-height: 1.5;
 			font-family: 'oACYCZno';
 			font-weight: bold;
 			color: $font-gray1;
@@ -164,13 +161,13 @@ body {
 			font-family: 'oACYCZno';
 			color: $font-gray1;
 			width: 100%;
-			font-size: 1.2rem;
-			line-height: 2.2rem;
+			font-size: 1.4rem;
+			line-height: 1.8;
 		}
 	}
 	.rent-fee__card {
 		width: calc(92% / 3);
-		height: 25vw;
+		height: 28vw;
 		margin-left: 4%;
 		position: relative;
 		@include box-shadow(1.6rem 1.2rem 4rem rgba(76, 76, 76, 0.5));
@@ -229,11 +226,11 @@ body {
 			.card-desc {
 				color: $font-white;
 				font-family: 'oACYCZno';
-				font-size: 1.2rem;
-				line-height: 1.8rem;
+				font-size: 1.6rem;
+				line-height: 1.8;
 				word-break: keep-all;
 				word-wrap: break-word;
-				margin-top: 4rem;
+				margin-top: 3rem;
 				text-align: center;
 				width: 60%;
 			}
@@ -322,7 +319,7 @@ body {
 			.text-title {
 				width: 100%;
 				text-align: center;
-				font-size: 1.8rem;
+				font-size: 2.2rem;
 				color: $font-white;
 				font-family: 'Do Hyeon';
 			}
@@ -401,7 +398,7 @@ body {
 		}
 	}
 	.rent-fee__card {
-		height: 33vw;
+		height: 37vw;
 		.card-bg {
 		}
 		.card-content {
@@ -450,12 +447,10 @@ body {
 			width: 100%;
 			.header-subtitle {
 				font-size: 1rem;
-				text-shadow: 1px 3px 7px $main-color;
 			}
 			.header-title {
 				font-size: 1.6rem;
 				line-height: 2.4rem;
-				text-shadow: 1px 3px 7px $main-color;
 			}
 			.header-desc {
 				width: 80%;
@@ -463,7 +458,6 @@ body {
 				font-size: 1.2rem;
 				line-height: 2.2rem;
 				margin-top: 4.5rem;
-				text-shadow: 1px 3px 7px $main-color;
 			}
 		}
 	}
@@ -529,18 +523,22 @@ body {
 		padding-left: 1%;
 		.fee-text__subtitle {
 			font-size: 1rem;
+			text-align: center;
 		}
 		.fee-text__title {
 			width: 100%;
 			font-size: 1.6rem;
 			line-height: 2.4rem;
 			margin-top: 1rem;
+			text-align: center;
 		}
 		.fee-text__desc {
 			margin-top: 3.5rem;
-			width: 100%;
+			width: 80%;
+			margin-left: 10%;
 			font-size: 1.2rem;
 			line-height: 2.2rem;
+			text-align: center;
 		}
 	}
 	.rent-fee__card {
